--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -10,7 +10,7 @@
 
     h4 {
         font-size:21px;
-        margin-top:0px;
+        
     }
 
     p {
@@ -21,10 +21,15 @@
 
     .comments-list .comment-body {
 
-        padding-left:51px;
+        padding-left:70px;
     }
     .comments-list li {
-    margin-bottom: 25px;
+    margin-bottom: 30px;
+}
+
+
+      .comments-list li p {
+    margin-bottom: -1px;
 }
 
     .fa-search {
@@ -32,50 +37,65 @@
         display:none;
     }
   
+
+    .avatar {
+    width: 60px;
+    height: 60px;
+    border:2px solid brown;
+}
+    .well {
+        border:transparent;
+        margin-bottom:2px;
+    }
 </style>
 
 <div class="well">
-    <h4>Contact Us</h4>
+    <h4 style="margin-top:0px;">Contact Us</h4>
  
     <p>
     Ramdwara, Near H.S. School  </p>
     <p>
     Nathdwara, Rajasthan, India </p>
     <p>
-    P: 9772445552 , 8890638988  </p>
-    <p> E: nathdwaramart@gmail.com
+    9772445552 , 8890638988  </p>
+    <p>Nathdwaramart@gmail.com
     </p>
 
-    <hr />
+   
 
   
+    <h4>Team</h4>
 
     <ul class="comments-list">
               <li>
-                <img src="img/user2.jpg" alt="" class="avatar ">
+                <img src="img/user2.jpeg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Bhupesh jangid - MD </span>
+                    <p>Artist</p>
                   <p>1234567892</p>
                 </div>
               </li>
               <li>
-                <img src="img/user3.jpg" alt="" class="avatar ">
+                <img src="img/user.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Nitesh singhvi - MD</span>
+                    <p>MBA</p>
                   <p> 3214569872</p>
                 </div>
               </li>
               <li>
-                <img src="img/user2.jpg" alt="" class="avatar ">
+                <img src="img/user2.jpeg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Krishna Jangid -CEO </span>
+                    <p>MCA</p>
                   <p>9876543210</p>
                 </div>
               </li>
               <li>
-                <img src="img/user3.jpg" alt="" class="avatar ">
+                <img src="img/user.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Jayesh Kabra - Founder</span>
+                    <p>B.Tech</p>
                   <p>8975321458</p>
                 </div>
               </li>
