--- a/app/views/login.html
+++ b/app/views/login.html
@@ -281,7 +281,7 @@ background-color: rgba(0,0,0,0.7);
     <div data-ng-repeat="obj in categories" class="col-md-2 col-xs-6">
         <div data-ng-click="gotoshop(obj.ID)" style="width:100%" >
             <img style="width:100%; height:150px;" src="data:image/jpeg;base64,{{obj.ImageSrc}}"  data-ng-if="obj.ImageSrc!=null && obj.ImageSrc!=''" />
-            <img data-ng-if="obj.ImageSrc==null || obj.ImageSrc==''" style="width:100%; height:150px;" src="img/21.jpg" alt="Alternate Text" />
+            <img data-ng-if="obj.ImageSrc==null || obj.ImageSrc==''" style="width:100%; height:150px;" src="img/23.jpg" alt="Alternate Text" />
             <p>{{obj.Name}}</p>
         </div>
     </div>
@@ -289,16 +289,21 @@ background-color: rgba(0,0,0,0.7);
 </div>
 
 
+
 <div style="padding-left:5px; padding-right:5px;" data-ng-if="listview==true && isload==false"">
     
     <table data-ng-click="gotoshop()" class="listtable" style="width:100%; background:#eaeaea;">
         <tr data-ng-repeat="obj in categories">
             <td style="width:85px;">
-                  <img style="width:75px; height:75px;" src="img/23.jpg" alt="Alternate Text" />
+
+                   <img style="width:75px; height:75px;" src="data:image/jpeg;base64,{{obj.ImageSrc}}"  data-ng-if="obj.ImageSrc!=null && obj.ImageSrc!=''" />
+            <img data-ng-if="obj.ImageSrc==null || obj.ImageSrc==''" style="width:75px; height:75px;" src="img/23.jpg" alt="Alternate Text" />
+
+              
             </td>
              <td>
                  <h3 style="margin-bottom:5px; margin-top:1px">{{obj.Name}}</h3>
-                 <h5>{{obj.Name}} description here !!</h5>
+                 <h5>{{obj.Name}} description  !!</h5>
              </td>
         </tr>
       
