--- a/app/views/login.html
+++ b/app/views/login.html
@@ -256,7 +256,7 @@ background-color: rgba(0,0,0,0.7);
 </div>
 
 
-<div style="background:#fff;" class="row">
+<div style="background:#cac6c6;" class="row">
     <div style="padding-left:0px; padding-right:0px;" class="col-xs-4">
          <img data-ng-click="darshan()" src="img/sh.jpg" alt="Alternate Text" />
     </div>
@@ -264,7 +264,7 @@ background-color: rgba(0,0,0,0.7);
            <img  src="img/train.jpg" alt="Alternate Text" />
      </div>
      <div style="padding-right:0px; padding-left:0px; text-align:right" class="col-xs-4">
-           <img  src="img/bus.jpg" alt="Alternate Text" />
+           <img  data-ng-click="bus()" src="img/bus.jpg" alt="Alternate Text" />
      </div>
 </div>
 
