--- a/app/views/bus.html
+++ b/app/views/bus.html
@@ -64,10 +64,14 @@
     font-size: 15px;
     color:#fff;
     }
-
+     .mainloader {
+        top:45%;
+    }
    
 </style>
-
+<div data-ng-if="isload==true || isload=='true'" class="mainloader">
+        <img style="width:35px;" src="img/loader.gif" alt="Alternate Text" />
+    </div>
 <div class="well">
     <h4 style="margin-top:0px;">BUS Timings</h4>
 
