--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -24,7 +24,7 @@
         padding-left:70px;
     }
     .comments-list li {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 
@@ -46,6 +46,11 @@
     .well {
         border:transparent;
         margin-bottom:2px;
+        padding-bottom:0px;
+    }
+
+      .dropdown-toggle {
+        display:none;
     }
 </style>
 
@@ -63,10 +68,7 @@
 
    
 
-  
-    <h4>Team</h4>
-
-    <ul class="comments-list">
+    <ul style="margin-top:7px;" class="comments-list">
               <li>
                 <img src="img/user2.jpeg" alt="" class="avatar ">
                 <div class="comment-body">
