--- a/app/views/shop.html
+++ b/app/views/shop.html
@@ -299,11 +299,14 @@
     input {
         border-radius:0px !important;
     }
+     .dropdown-toggle {
+        display:none;
+    }
 </style>
 
 
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
-        <img style="width:35px;" src="img/loader.gif" alt="Alternate Text" />
+        <img style="width:60px;" src="img/loader.gif" alt="Alternate Text" />
     </div>
 
 
