--- a/app/views/about.html
+++ b/app/views/about.html
@@ -30,21 +30,19 @@
 
         display:none;
     }
+    .dropdown-toggle {
+        display:none;
+    }
 </style>
-
+  <img style="width:100%; max-height:200px;" src="img/15.jpg" alt="Alternate Text" />
 <div class="well">
-    <h4>About Us</h4>
+ 
  
     <p>
   Nathdwara Mart Is the Multiple Business Site. That Provide the Complete information About Nathdwara that may be includes any shop,Business,and personal contact Rather then we also provide some ads features of your farm and shop.
     </p>
 
  
-
-  
-
- 
-
 </div>
 
 
