--- a/app/views/bus.html
+++ b/app/views/bus.html
@@ -81,10 +81,12 @@
         padding:2px !important;
         margin-top:-5px;
     }
-   
+    .dropdown-toggle {
+        display:none;
+    }
 </style>
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
-        <img style="width:35px;" src="img/loader.gif" alt="Alternate Text" />
+        <img style="width:60px;" src="img/loader.gif" alt="Alternate Text" />
     </div>
 
 <div>
