--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -21,7 +21,7 @@
 
     .comments-list .comment-body {
 
-        padding-left:70px;
+        padding-left:80px;
     }
     .comments-list li {
     margin-bottom: 15px;
@@ -38,10 +38,12 @@
     }
   
 
+
     .avatar {
-    width: 60px;
-    height: 60px;
-    border:2px solid brown;
+    width: 70px;
+    height: 70px;
+    border:2px solid #ccc;
+    border-radius:100%;
 }
     .well {
         border:transparent;
@@ -52,6 +54,12 @@
       .dropdown-toggle {
         display:none;
     }
+
+      .comments-list .author {
+    margin-bottom: 2px;
+    display: inline-block;
+    margin-top: 5px;
+}
 </style>
 
 <div class="well">
@@ -68,41 +76,42 @@
 
    
 
-    <ul style="margin-top:7px;" class="comments-list">
+    <ul style="margin-top:15px;" class="comments-list">
               <li>
-                <img src="img/user2.jpeg" alt="" class="avatar ">
+                <img src="img/bhupesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
-                  <span class="author uppercase">Bhupesh jangid - MD </span>
+                  <span class="author uppercase">Bhupesh jangid </span>
                     <p>Artist</p>
-                  <p>1234567892</p>
+                  <p>9772445552</p>
                 </div>
               </li>
               <li>
-                <img src="img/user.jpg" alt="" class="avatar ">
+                <img src="img/nitesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
-                  <span class="author uppercase">Nitesh singhvi - MD</span>
+                  <span class="author uppercase">Nitesh singhvi</span>
                     <p>MBA</p>
-                  <p> 3214569872</p>
+                  <p> 8890638988</p>
                 </div>
               </li>
               <li>
-                <img src="img/user2.jpeg" alt="" class="avatar ">
+                <img src="img/krishna.jpg" alt="" class="avatar ">
                 <div class="comment-body">
-                  <span class="author uppercase">Krishna Jangid -CEO </span>
+                  <span class="author uppercase">Krishna Jangid - CEO </span>
                     <p>MCA</p>
-                  <p>9876543210</p>
+                  <p>8559885552</p>
                 </div>
               </li>
               <li>
-                <img src="img/user.jpg" alt="" class="avatar ">
+                <img src="img/jayesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
-                  <span class="author uppercase">Jayesh Kabra - Founder</span>
+                  <span class="author uppercase">Jayesh Kabra</span>
                     <p>B.Tech</p>
-                  <p>8975321458</p>
+                  <p>9619470102</p>
                 </div>
               </li>
             
             </ul>
+
 
 </div>
 
