--- a/app/views/login.html
+++ b/app/views/login.html
@@ -35,7 +35,7 @@ background-color: rgba(0,0,0,0.7);
     font-size: 31px;
     text-align: center;
     line-height: 113px;
-    background: red;
+   
     color: #fff;
     font-family: cursive;
     }
@@ -88,8 +88,8 @@ background-color: rgba(0,0,0,0.7);
     }
 
     .container .row {
-        margin-left:5px;
-        margin-right:5px;
+        margin-left:0px;
+        margin-right:0px;
         background:#eaeaea;
         color:#333;
     }
@@ -215,6 +215,20 @@ background-color: rgba(0,0,0,0.7);
     visibility: visible;
   
 }
+
+    .notwrap {
+    overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    display: -webkit-inline-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    margin-bottom: 0;
+    line-height: 1.3;
+}
 </style>
 
 
@@ -243,12 +257,32 @@ background-color: rgba(0,0,0,0.7);
 
 <div class="swiper-container">
 <div class="swiper-wrapper">
-    <div class="swiper-slide indigo">Entertainment</div>
-<div class="swiper-slide pink">Restaurants</div>
-    <div class="swiper-slide purple">Auto <small>Healthcare</small> </div>
-<div class="swiper-slide green">Auto <small>Mobiles</small> </div>
-<div class="swiper-slide blue">Contractors</div>
-    <div class="swiper-slide yellow">Personal care</div>
+
+     <div style="background:#fff;" class="swiper-slide "> 
+      <img style="width:100%; height:inherit"  src="img/37.jpg" alt="Alternate Text" />
+</div>
+
+     <div style="background:#fff;" class="swiper-slide "> 
+      <img style="width:100%; height:inherit"  src="img/36.jpg" alt="Alternate Text" />
+</div>
+
+     <div style="background:#000;" class="swiper-slide">
+          <img style="width:100%; height:inherit" src="img/34.jpg" alt="Alternate Text" />
+    </div>
+
+    <div style="background:red;" class="swiper-slide">
+        <img style="width:100%; height:inherit" src="img/33.jpg" alt="Alternate Text" />
+    </div>
+
+   
+<div style="background:#fff;" class="swiper-slide "> 
+      <img style="width:100%; height:inherit"  src="img/35.jpg" alt="Alternate Text" />
+</div>
+   
+   
+     <div style="background:#fff;" class="swiper-slide "> 
+      <img style="width:100%; height:inherit"  src="img/45.jpg" alt="Alternate Text" />
+</div>
 
 </div>
  
@@ -256,15 +290,15 @@ background-color: rgba(0,0,0,0.7);
 </div>
 
 
-<div style="background:#cac6c6;" class="row">
+<div style="background:#cac6c6; margin-left:0px; margin-right:0px;" class="row">
     <div style="padding-left:0px; padding-right:0px;" class="col-xs-4">
-         <img style="width:100%;" data-ng-click="darshan()" src="img/12.jpg" alt="Alternate Text" />
+         <img style="width:100%; border-right:2px solid #fff" data-ng-click="darshan()" src="img/darshan.jpg" alt="Alternate Text" />
     </div>
      <div style="text-align:center; padding:0px" class="col-xs-4">
-           <img data-ng-click="train()"style="width:100%;" src="img/9.jpg" alt="Alternate Text" />
+           <img data-ng-click="train()"style="width:100%; border-left:1px solid #fff; border-right:1px solid #fff;" src="img/train.jpg" alt="Alternate Text" />
      </div>
      <div style="padding-right:0px; padding-left:0px; text-align:right" class="col-xs-4">
-           <img style="width:100%;" data-ng-click="bus()" src="img/10.jpg" alt="Alternate Text" />
+           <img style="width:100%; border-left:2px solid #fff" data-ng-click="bus()" src="img/bus.jpg" alt="Alternate Text" />
      </div>
 </div>
 
@@ -295,9 +329,10 @@ background-color: rgba(0,0,0,0.7);
     <div class="row">
     <div data-ng-repeat="obj in categories" class="col-md-2 col-xs-6">
         <div data-ng-click="gotoshop(obj.ID)" style="width:100%" >
-            <img style="width:100%; height:150px;" src="data:image/jpeg;base64,{{obj.ImageSrc}}"  data-ng-if="obj.ImageSrc!=null && obj.ImageSrc!=''" />
-            <img data-ng-if="obj.ImageSrc==null || obj.ImageSrc==''" style="width:100%; height:150px;" src="img/23.jpg" alt="Alternate Text" />
-            <p>{{obj.Name}}</p>
+            <img style="width:100%; height:150px; display:none;" src="{{ImageUrl}}{{obj.ImagePath}}"  data-ng-if="obj.ImagePath!=null && obj.ImagePath!=''" imageonload />
+            <img data-ng-if="_obj.ImagePath==null || _obj.ImagePath==''" style="width:100%; height:150px;" src="img/23.jpg" alt="Alternate Text" />
+              <img style="width:100%; height:150px; border:transparent" ng-if="_obj.ImagePath!=null && _obj.ImagePath!=''" src="img/loader1.gif" class="img-responsive img-thumbnail img-circle" alt="loading.." />
+            <p class="notwrap">{{obj.Name}}</p>
         </div>
     </div>
         </div>
