--- a/app/views/login.html
+++ b/app/views/login.html
@@ -302,12 +302,10 @@ background-color: rgba(0,0,0,0.7);
      </div>
 </div>
 
-
-
 <div class="categoryhead">
     <div class="row">
     <div style="text-align:left; padding-left:5px;" class="col-xs-4">
-        <a href="https://web.facebook.com/">  <img style="margin-top:5px;" src="img/facebook.png" alt="Alternate Text" /></a>
+        <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px;" src="img/facebook.png" alt="Alternate Text" /></a>
       
     </div>
       <div class="col-xs-4">
