--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -78,7 +78,7 @@
 
     <ul style="margin-top:15px;" class="comments-list">
               <li>
-                <img src="img/bhupesh.jpg" alt="" class="avatar ">
+                <img src="img/bhu.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Bhupesh jangid </span>
                     <p>Artist</p>
