--- a/app/views/darshan.html
+++ b/app/views/darshan.html
@@ -49,7 +49,7 @@
     }
 
     .darshan {
-        color:#fff;
+       
     }
 
     .darshan:first-letter {
@@ -72,9 +72,13 @@
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
         <img style="width:60px;" src="img/loader.gif" alt="Alternate Text" />
     </div>
+<div>
+    <img style="width:100%; max-height:150px; margin-top:6px;" src="img/shr.jpg" alt="Alternate Text" />
 
+   
+</div>
 <div class="well">
-    <h4 style="margin-top:0px;">Darshan Timings</h4>
+ 
 
 
     <table class="table table-bordered">
@@ -84,10 +88,10 @@
                  <td>TIME [Open - Close] </td>
             </tr>
         <tr data-ng-repeat="obj in DarshanTimings">
-            <td width="40%;" data-ng-class="{'green': $index % 2 === 0 }" class="red">
+            <td width="40%;" >
                 <p class="darshan"> {{obj.Name}} </p>
             </td>
-             <td class="pink" style="color:#fff;" width="60%">
+             <td   width="60%">
                  {{obj.OpenTime}} to  {{obj.CloseTime}}
              </td>
         </tr>
