--- a/app/views/darshan.html
+++ b/app/views/darshan.html
@@ -85,7 +85,7 @@
 
         <tr>
             <td> DARSHAN</td>
-                 <td>TIME [Open - Close] </td>
+                 <td>TIME </td>
             </tr>
         <tr data-ng-repeat="obj in DarshanTimings">
             <td width="40%;" >
