--- a/app/views/login.html
+++ b/app/views/login.html
@@ -345,7 +345,7 @@ background-color: rgba(0,0,0,0.7);
         <tr data-ng-repeat="obj in categories">
             <td data-ng-click="gotoshop(obj.ID)" style="width:85px;">
 
-                   <img style="width:75px; height:75px;" src="{{ImageUrl}}{{obj.ImagePath}}"  data-ng-if="obj.ImagePath!=null && obj.ImagePath!=''" imageonload />
+                   <img style="width:75px; height:75px;" src="{{ImageUrl}}{{obj.ImagePath}}"  data-ng-if="obj.ImagePath!=null && obj.ImagePath!=''" imageonload1 />
             <img data-ng-if="obj.ImagePath==null || obj.ImagePath==''" style="width:75px; height:75px;" src="img/23.jpg" alt="Alternate Text" />
 
               
