--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -81,7 +81,7 @@
                 <img src="img/bhu.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Bhupesh jangid </span>
-                    <p>Artist</p>
+                    <p>Managing Director</p>
                   <p>9772445552</p>
                 </div>
               </li>
@@ -89,7 +89,7 @@
                 <img src="img/nitesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Nitesh singhvi</span>
-                    <p>MBA</p>
+                    <p>MBA - Creative Designer</p>
                   <p> 8890638988</p>
                 </div>
               </li>
@@ -97,7 +97,7 @@
                 <img src="img/krishna.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Krishna Jangid - CEO </span>
-                    <p>MCA</p>
+                    <p>MCA - Web Developer</p>
                   <p>8559885552</p>
                 </div>
               </li>
@@ -105,7 +105,7 @@
                 <img src="img/jayesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Jayesh Kabra</span>
-                    <p>B.Tech</p>
+                    <p>M.Tech - App Developer</p>
                   <p>9619470102</p>
                 </div>
               </li>
