--- a/app/views/login.html
+++ b/app/views/login.html
@@ -18,11 +18,13 @@ background-color: rgba(0,0,0,0.7);
   
     padding: 3px;
     position: relative;
-    font-family: cursive;
-    margin-top: -29px;
-    font-size:17px;
+    font-family: Verdana;
+    margin-top: -25px;
+    font-size:14px;
 
     }
+
+
 
     .col-md-2 {
         padding-left:3px;
@@ -182,7 +184,7 @@ background-color: rgba(0,0,0,0.7);
     }
 
     .listtable h3 {
-          font-family: cursive;
+          font-family: Verdana;
     }
 
     .listtable h5 {
@@ -221,13 +223,12 @@ background-color: rgba(0,0,0,0.7);
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
-    display: -webkit-inline-box;
+   
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     -ms-word-break: break-all;
     word-break: break-all;
-    margin-bottom: 0;
-    line-height: 1.3;
+   
 }
 </style>
 
@@ -352,7 +353,7 @@ background-color: rgba(0,0,0,0.7);
             </td>
              <td data-ng-click="gotoshop(obj.ID)">
                  <h3 style="margin-bottom:5px; margin-top:1px">{{obj.Name}}</h3>
-                 <h5>{{obj.Name}} description  !!</h5>
+                 <h5>{{obj.Name}} Category</h5>
              </td>
         </tr>
       
