--- a/app/views/shop.html
+++ b/app/views/shop.html
@@ -11,7 +11,7 @@
         filter: alpha(opacity=50);
         padding: 3px;
         position: relative;
-        font-family: cursive;
+        font-family: verdana;
         margin-top: -29px;
         font-size: 17px;
     }
@@ -28,7 +28,7 @@
         line-height: 113px;
         background: red;
         color: #fff;
-        font-family: cursive;
+        font-family: verdana;
     }
 
 
@@ -156,7 +156,7 @@
     }
 
     .listtable h3 {
-        font-family: cursive;
+        font-family: verdana;
     }
 
     .listtable h5 {
@@ -323,7 +323,7 @@
 <ul class=" widget-products">
 
       <li data-ng-if="totalrecord!=true && totalrecord!='true'" style="padding-bottom:10px; padding-top:10px; background:#a09a9a ; text-align:center;" class="" >
-    <span class="" style="font-family:cursive; text-align:center; background:#a09a9a ; color:#fff; font-size:17px; "> {{categaryname}}</span> 
+    <span class="" style="font-family:verdana; text-align:center; background:#a09a9a ; color:#fff; font-size:17px; "> {{categaryname}}</span> 
 </li>
     <li data-ng-if="totalrecord==true || totalrecord=='true'">
 
