--- a/app/views/login.html
+++ b/app/views/login.html
@@ -308,8 +308,10 @@ background-color: rgba(0,0,0,0.7);
     <div class="row">
     <div style="text-align:left; padding-left:5px;" class="col-xs-4">
         <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px;" src="img/facebook.png" alt="Alternate Text" /></a>
+        <a onclick="window.plugins.socialsharing.share('Welcome to Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.nathdwaramart.nathdwaramart&hl=en')"><img style="margin-top:5px;" height="40" width="40" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
       
     </div>
+
       <div class="col-xs-4">
           <h5>Looks for</h5>
       </div>
@@ -324,10 +326,9 @@ background-color: rgba(0,0,0,0.7);
 </div>
 
 
-<button onclick="window.plugins.socialsharing.share('Message only')">message only</button>
+<!--<button onclick="window.plugins.socialsharing.share('Message only')">message only</button>
 <button onclick="window.plugins.socialsharing.share('Message and subject', 'The subject')">message and subject</button>
 <button onclick="window.plugins.socialsharing.share(null, null, null, 'http://www.x-services.nl')">link only</button>
-<button onclick="window.plugins.socialsharing.share('Message and link', null, null, 'http://www.x-services.nl')">message and link</button>
 <button onclick="window.plugins.socialsharing.share(null, null, 'https://www.google.nl/images/srpr/logo4w.png', null)">image only</button>
 <button onclick="window.plugins.socialsharing.share('Message and image', null, 'https://www.google.nl/images/srpr/logo4w.png', null)">message and image</button>
 <button onclick="window.plugins.socialsharing.share('Message, image and link', null, 'https://www.google.nl/images/srpr/logo4w.png', 'http://www.x-services.nl')">message, image and link</button>
@@ -335,7 +336,7 @@ background-color: rgba(0,0,0,0.7);
 
 <button onclick="window.plugins.socialsharing.shareViaWhatsApp('Message via WhatsApp', null /* img */, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">msg via WhatsApp (with errcallback)</button>
 <button onclick="window.plugins.socialsharing.shareViaInstagram('Message via Instagram', 'https://www.google.nl/images/srpr/logo4w.png', function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">msg via Instagram</button>
-<button onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null /* img */, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">msg via Facebook (with errcallback)</button>
+<button onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null /* img */, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">msg via Facebook (with errcallback)</button>-->
 
  
 <div data-ng-if="gridview==true" class="cat">
