--- a/app/views/about.html
+++ b/app/views/about.html
@@ -39,7 +39,7 @@
  
  
     <p>
-  Nathdwara Mart Is the Multiple Business Site. That Provide the Complete information About Nathdwara that may be includes any shop,Business,and personal contact Rather then we also provide some ads features of your farm and shop.
+  Nathdwara Mart is a Website and Android App that provides Information about Local Business and Services that is require in Daily Needs. Its provide information about all Government, Public and Private Department.
     </p>
 
  
