--- a/app/views/about.html
+++ b/app/views/about.html
@@ -39,7 +39,7 @@
  
  
     <p>
-  Nathdwara Mart is a Website and Android App that provides Information about Local Business and Services that is require in Daily Needs. Its provide information about all Government, Public and Private Department.
+        Nathdwaramart is a Website and Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
     </p>
 
  
