--- a/app/views/train.html
+++ b/app/views/train.html
@@ -175,6 +175,20 @@
 
 </div>
 
+<script>
+    $(document).ready(function () {
+        alert("called")
+        var allSelectElements = document.getElementsByTagName('select');
+        for (var i = 0; i < allSelectElements.length; i++) {
+            allSelectElements[i].addEventListener('touchstart', function (e) {
+                //This is the important line
+                e.stopPropagation();
+            }, false);
+        }
+    });
+    
+</script>
+
 
 
 
