--- a/app/views/train.html
+++ b/app/views/train.html
@@ -126,7 +126,7 @@
 
                     <label> From</label>
                     <select class="form-control">
-                        <option value="Nathdwara">Nathdwara</option>
+                        <option value="Mavli">Mavli</option>
                     </select>
                 </div>
             </div>
