--- a/app/views/about.html
+++ b/app/views/about.html
@@ -33,9 +33,15 @@
     .dropdown-toggle {
         display:none;
     }
+
+    .well {
+        background:#fff;
+        border-bottom:transparent;
+    }
 </style>
-  <img style="width:100%; max-height:200px;" src="img/15.jpg" alt="Alternate Text" />
+  <img style="width:100%;" src="img/about.png" alt="Alternate Text" />
 <div class="well">
+    <h4>About US</h4>
  
  
     <p>
@@ -43,6 +49,7 @@
     </p>
 
  
+
 </div>
 
 
