--- a/app/views/login.html
+++ b/app/views/login.html
@@ -21,15 +21,17 @@ background-color: rgba(0,0,0,0.7);
     font-family: Verdana;
     margin-top: -25px;
     font-size:14px;
+    margin-bottom:4px;
 
     }
 
 
 
     .col-md-2 {
-        padding-left:3px;
-        padding-right:3px;
+        padding-left:2px;
+        padding-right:2px;
     }
+
 
     .swiper-slide {
 
@@ -70,10 +72,11 @@ background-color: rgba(0,0,0,0.7);
     width: 100%;
 }
 
+
     .categoryhead h5 {
-        font-size:22px;
+        font-size:18px;
         color:#000;
-        line-height:19px;
+        line-height:17px;
             white-space: nowrap
     }
 
@@ -259,11 +262,13 @@ background-color: rgba(0,0,0,0.7);
 <div class="swiper-container">
 <div class="swiper-wrapper">
 
-     <div style="background:#fff;" class="swiper-slide "> 
-      <img style="width:100%; height:inherit"  src="img/37.jpg" alt="Alternate Text" />
+     <div style="background:#fff;" class="swiper-slide" ng-repeat="_obj in FeaturedImages"> 
+
+         <img style="width:100%; height:inherit" src="{{FeaturedImageUrl}}{{_obj.ImagePath}}" data-ng-if="_obj.ImagePath!=null && _obj.ImagePath!=''" imageonload1 />
+         <img data-ng-if="_obj.ImagePath==null || _obj.ImagePath==''" src="img/23.jpg" alt="Alternate Text" />
 </div>
 
-     <div style="background:#fff;" class="swiper-slide "> 
+     <!--<div style="background:#fff;" class="swiper-slide "> 
       <img style="width:100%; height:inherit"  src="img/36.jpg" alt="Alternate Text" />
 </div>
 
@@ -283,7 +288,7 @@ background-color: rgba(0,0,0,0.7);
    
      <div style="background:#fff;" class="swiper-slide "> 
       <img style="width:100%; height:inherit"  src="img/45.jpg" alt="Alternate Text" />
-</div>
+</div>-->
 
 </div>
  
@@ -306,13 +311,14 @@ background-color: rgba(0,0,0,0.7);
 
 <div class="categoryhead">
     <div class="row">
-    <div style="text-align:left; padding-left:5px;" class="col-xs-4">
-        <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px;" src="img/facebook.png" alt="Alternate Text" /></a>
-        <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.NathdwaraMartNew')"><img style="margin-top:5px;" height="30" width="30" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
-      
+    <div style="text-align:left; padding-left:5px; padding-right:0px;" class="col-xs-4">
+        <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/facebook.png" alt="Alternate Text" /></a>
+        <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.nathdwaramart.nathdwaramart&hl=en')"><img style="margin-top:5px;" height="32" width="30" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
+       <a onclick="window.open('http://nathdwaramart.com/');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/www.png" alt="Alternate Text" /></a>
     </div>
 
-      <div class="col-xs-4">
+
+      <div style="padding-right:5px;" class="col-xs-4">
           <h5>Looks for</h5>
       </div>
       <div style="padding-right:7px;" class="col-xs-4">
@@ -340,7 +346,7 @@ background-color: rgba(0,0,0,0.7);
 
  
 <div data-ng-if="gridview==true" class="cat">
-    <div class="row">
+    <div style="margin-left:2px; margin-right:2px;" class="row">
     <div data-ng-repeat="obj in categories" class="col-md-2 col-xs-6">
         <div id="{{obj.ID}}" data-ng-click="gotoshop(obj.ID)" style="width:100%" >
             <img style="width:100%; height:150px; display:none;" src="{{ImageUrl}}{{obj.ImagePath}}"  data-ng-if="obj.ImagePath!=null && obj.ImagePath!=''" imageonload />
@@ -354,13 +360,15 @@ background-color: rgba(0,0,0,0.7);
 
 
 
-<div style="padding-left:5px; padding-right:5px;" data-ng-if="listview==true && isload==false"">
+
+
+<div style="padding-left:6px; " data-ng-if="listview==true && isload==false"">
     
     <table  class="listtable" style="width:100%; background:#eaeaea;">
         <tr data-ng-repeat="_obj in categories">
             <td id="{{_obj.ID}}" data-ng-click="gotoshop(_obj.ID)" style="width:85px;">
 
-                   <img style="width:75px; height:75px;" src="{{ImageUrl}}{{_obj.ImagePath}}"  data-ng-if="_obj.ImagePath!=null && _obj.ImagePath!=''" imageonload1 />
+           <img style="width:75px; height:75px;" src="{{ImageUrl}}{{_obj.ImagePath}}"  data-ng-if="_obj.ImagePath!=null && _obj.ImagePath!=''" imageonload1 />
             <img data-ng-if="_obj.ImagePath==null || _obj.ImagePath==''" style="width:75px; height:75px;" src="img/23.jpg" alt="Alternate Text" />
 
               
