--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -77,7 +77,7 @@
    
 
     <ul style="margin-top:15px;" class="comments-list">
-              <li>
+              <li class="animated bounceInLeft">
                 <img src="img/bhu.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Bhupesh jangid </span>
@@ -85,7 +85,7 @@
                   <p>9772445552</p>
                 </div>
               </li>
-              <li>
+              <li class="nitesh hide">
                 <img src="img/nitesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Nitesh singhvi</span>
@@ -93,7 +93,7 @@
                   <p> 8890638988</p>
                 </div>
               </li>
-              <li>
+              <li class="krishna hide">
                 <img src="img/krishna.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Krishna Jangid - CEO </span>
@@ -101,7 +101,7 @@
                   <p>8559885552</p>
                 </div>
               </li>
-              <li>
+              <li class="jayesh hide">
                 <img src="img/jayesh.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Jayesh Kabra</span>
