--- a/app/views/login.html
+++ b/app/views/login.html
@@ -315,7 +315,7 @@ background-color: rgba(0,0,0,0.7);
     <div class="row">
     <div style="text-align:left; padding-left:5px; padding-right:0px;" class="col-xs-4">
         <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/facebook.png" alt="Alternate Text" /></a>
-        <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.nathdwaramart.nathdwaramart&hl=en')"><img style="margin-top:5px;" height="32" width="30" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
+        <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.NathdwaraMartNew')"><img style="margin-top:5px;" height="32" width="30" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
        <a onclick="window.open('http://nathdwaramart.com/');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/www.png" alt="Alternate Text" /></a>
     </div>
 
